closDevOrg/force-app/main/default/objects/LOS_Relationship__c/fields/LOS_Account__c.field-meta.xml
<CustomField>
    <fullName>LOS_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account. See docs/data-dictionary.md for usage.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LOS Relationship Account</relationshipLabel>
    <relationshipName>LOS_Relationship_Account</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>