closDevOrg/force-app/main/default/objects/LOS_Relationship__c/fields/LOS_Relationship_Number__c.field-meta.xml
<CustomField>
    <fullName>LOS_Relationship_Number__c</fullName>
    <description>Relationship Number. See docs/data-dictionary.md for usage.</description>
    <externalId>true</externalId>
    <label>Relationship Number</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>