closDevOrg/force-app/main/default/objects/LOS_Relationship__c/fields/LOS_Segment_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>LOS_Segment_Snapshot__c</fullName>
    <description>Stored segment code at capture time; never a cross-object formula. Context only, not a sharing grant.</description>
    <label>Segment Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>